<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white_bottom_sheet">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:text="@string/addFood"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:contentDescription="@string/close"
        android:padding="10dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/editFoodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="60dp"
        android:hint="@string/foodName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layoutDirection="rtl"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/editRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="20dp"
        android:hint="@string/recipe"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layoutDirection="rtl"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/editFoodName" />

    <Button
        android:id="@+id/btnSaveFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRecipe" />

</androidx.constraintlayout.widget.ConstraintLayout>